--- a/src/preprocessing/dataset-creation.ipynb
+++ b/src/preprocessing/dataset-creation.ipynb
@@ -193,7 +193,7 @@
         "                break\n",
         "            partnum += 1\n",
         "            # Create a new file name\n",
-        "            with open(f\"{dest_folder}/trips-part-{partnum}\", 'wb') as fd:\n",
+        "            with open(f\"{dest_folder}/chicago-divvy-trips-part-{partnum}\", 'wb') as fd:\n",
         "                fd.write(chunk)\n",
         "\n",
         "def join(output_file, parts):\n",
