--- a/src/preprocessing/dataset-creation.ipynb
+++ b/src/preprocessing/dataset-creation.ipynb
@@ -82,6 +82,7 @@
         "import os\n",
         "import pickle\n",
         "\n",
+        "from preprocessing import *\n",
         "\n",
         "# files got from https://divvy-tripdata.s3.amazonaws.com/index.html. Data folder should look like this\n",
         "'''\n",
@@ -120,7 +121,7 @@
         "    └── ...\n",
         "'''"
       ],
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -130,86 +131,9 @@
             ]
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 3
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "adkIkww0T1i4"
-      },
-      "source": [
-        "def path():\n",
-        "    current_path = os.getcwd()\n",
-        "    return f\"{current_path}/../../data/files\"\n",
-        "\n",
-        "def data_path(year):\n",
-        "    return f\"{path()}/{year}\"\n",
-        "\n",
-        "def get_csvs(years):\n",
-        "    current_path = path()\n",
-        "    paths = []\n",
-        "    for year in years:\n",
-        "        pickle_path = f\"{current_path}/{year}/trips-{year}.csv\"\n",
-        "        paths.append(pickle_path)\n",
-        "    return paths\n",
-        "\n",
-        "def merge_csv(inputs, output, year, cols):\n",
-        "    df = pd.DataFrame()\n",
-        "    for input in inputs:\n",
-        "        print(f\"Reading {input}\")\n",
-        "        df_temp = pd.read_csv(input)\n",
-        "        df_temp[cols[0]] = pd.to_datetime(df_temp[cols[0]], format='%Y-%m-%d %H:%M:%S', infer_datetime_format=True)\n",
-        "        df = pd.concat([df, df_temp], join='outer')\n",
-        "    output_file = f\"{output}/trips-{year}.csv\"\n",
-        "    print(f\"Writing {output_file}\")\n",
-        "    df[cols].to_csv(output_file,index=False)\n",
-        "\n",
-        "def merge_years(inputs):\n",
-        "    df = pd.DataFrame()\n",
-        "    for input in inputs:\n",
-        "        print(f\"Reading {input}\")\n",
-        "        df_temp = pd.read_csv(input)\n",
-        "        df = pd.concat([df, df_temp], join='outer')\n",
-        "    df['start_time'] = df['start_time'].combine_first(df['starttime'])\n",
-        "    df = df.drop(columns=[\"starttime\"])\n",
-        "    return df\n",
-        "\n",
-        "def save_with_split(df, dest_folder, write_size):\n",
-        "    # Make a destination folder if it doesn't exist yet\n",
-        "    if not os.path.exists(dest_folder):\n",
-        "        os.mkdir(dest_folder)\n",
-        "    else:\n",
-        "        # Otherwise clean out all files in the destination folder\n",
-        "        for file in os.listdir(dest_folder):\n",
-        "            os.remove(os.path.join(dest_folder, file))\n",
-        "    partnum = 0\n",
-        "\n",
-        "    df.to_csv(f\"{path()}/group.csv\")\n",
-        "    \n",
-        "    with open(f\"{path()}/group.csv\", 'rb') as input:\n",
-        "        while True:\n",
-        "            chunk = input.read(write_size)\n",
-        "            if not chunk:\n",
-        "                # End the loop if we have hit EOF\n",
-        "                break\n",
-        "            partnum += 1\n",
-        "\n",
-        "            print(f\"Writing {dest_folder}/chicago-divvy-trips-part-{partnum}\")\n",
-        "            # Create a new file name\n",
-        "            with open(f\"{dest_folder}/chicago-divvy-trips-part-{partnum}\", 'wb') as fd:\n",
-        "                fd.write(chunk)\n",
-        "\n",
-        "def join(output_file, parts):\n",
-        "  with open(output_file, 'wb') as output:\n",
-        "    for part in parts:\n",
-        "        with open(part, 'rb') as input_file:\n",
-        "          print(f\"Putting together {part}\")\n",
-        "          output.write(input_file.read())"
-      ],
-      "execution_count": 42,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -385,7 +309,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -422,7 +346,7 @@
             "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>from_station_id</th>\n      <th>from_station_name</th>\n      <th>start_time</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>131</td>\n      <td>Lincoln Ave &amp; Belmont Ave</td>\n      <td>2014-06-30 23:57:00</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>282</td>\n      <td>Halsted St &amp; Maxwell St</td>\n      <td>2014-06-30 23:56:00</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>327</td>\n      <td>Sheffield Ave &amp; Webster Ave</td>\n      <td>2014-06-30 23:33:00</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>134</td>\n      <td>Peoria St &amp; Jackson Blvd</td>\n      <td>2014-06-30 23:26:00</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>320</td>\n      <td>Loomis St &amp; Lexington St</td>\n      <td>2014-06-30 23:16:00</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>3817999</th>\n      <td>112</td>\n      <td>Green St &amp; Randolph St</td>\n      <td>2019-12-31 23:56:13</td>\n    </tr>\n    <tr>\n      <th>3818000</th>\n      <td>90</td>\n      <td>Millennium Park</td>\n      <td>2019-12-31 23:56:34</td>\n    </tr>\n    <tr>\n      <th>3818001</th>\n      <td>623</td>\n      <td>Michigan Ave &amp; 8th St</td>\n      <td>2019-12-31 23:57:05</td>\n    </tr>\n    <tr>\n      <th>3818002</th>\n      <td>623</td>\n      <td>Michigan Ave &amp; 8th St</td>\n      <td>2019-12-31 23:57:11</td>\n    </tr>\n    <tr>\n      <th>3818003</th>\n      <td>256</td>\n      <td>Broadway &amp; Sheridan Rd</td>\n      <td>2019-12-31 23:57:17</td>\n    </tr>\n  </tbody>\n</table>\n<p>20483556 rows × 3 columns</p>\n</div>"
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 5
         }
       ],
       "source": [
