--- a/test/create_timeseries_test.ipynb
+++ b/test/create_timeseries_test.ipynb
@@ -39,7 +39,7 @@
    "source": [
     "class TestCreateTimeseries(unittest.TestCase):\n",
     "    \n",
-    "    def no_test_nn_format(self):\n",
+    "    def test_nn_format(self):\n",
     "        df = pd.DataFrame({\n",
     "            \"start_time\": [\"2018-01-01 00:00:00\"] * 3 + [\"2018-01-01 01:00:00\"] * 3 +  [\"2018-01-01 02:00:00\"] * 3,\n",
     "            \"from_station_id\": [1, 2, 3, 1, 2, 3, 1, 2, 3],\n",
